ensure geist variable font renders properly on safari

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,9 +5,13 @@
 
 
 @layer base {
-  @font-face {
-    font-family: "Geist";
-    src: url("/fonts/GeistVF.woff2");
+  @supports (font-variation-settings: normal) {
+    @font-face {
+      font-family: "Geist";
+      font-weight: 100 900;
+      font-display: swap;
+      src: url("/fonts/GeistVF.woff2") format("woff2");
+    }
   }
 
   :root {
